Avoid overflow of the interventions table

--- a/templates/admin.css
+++ b/templates/admin.css
@@ -1,3 +1,12 @@
+body {
+    max-width: unset;
+}
+
+.description {
+    height: 75px;
+    overflow: hidden;
+}
+
 .btn {
     display: block;
     padding: .5rem .8rem;
